# trim-filename

./: LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
trim_filename/: __main__.py
